{
    "name": "PlayerMove",
    "maps": [
        {
            "name": "Player",
            "id": "3cc492a0-5620-47f6-b968-4c9716dcc229",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "29ba1dde-8438-4ee6-ba35-c851727c6719",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "99ced03e-60fd-4993-aac0-b119b6ed0cdd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "a19b53a8-b5cd-4d30-99cd-d644b4c0b773",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InteractAction",
                    "type": "Button",
                    "id": "eeb72d98-c3f7-4f1d-a468-c9224bab8aae",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InventoryAction",
                    "type": "Button",
                    "id": "8bdeed4b-1d2d-4e55-8cf5-62e3f1632033",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Exit",
                    "type": "Button",
                    "id": "425f3866-c172-4fd6-81a3-c305bd018fd8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "f509ac8f-cee6-4a54-b5c1-c0abdba3320c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftMouse",
                    "type": "Button",
                    "id": "c669245a-ff2e-4d92-82dc-f6c32fccc534",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HotbarKey",
                    "type": "Button",
                    "id": "811be631-d8fe-4d1c-b183-69ab9faa8bbf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightMouse",
                    "type": "Button",
                    "id": "996d9584-798a-4aa9-9a4a-1773dc514652",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "347dc256-48bf-4905-9a89-64edd8671296",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "QuickSlot1",
                    "type": "Button",
                    "id": "bb20476a-65b3-476a-94ee-6fc6bd88a60c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickSlot2",
                    "type": "Button",
                    "id": "a82dbe7f-6262-4311-8cdf-96aa0f005972",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickSlot3",
                    "type": "Button",
                    "id": "1f16bcf4-21b2-4847-9d5c-103683cd9378",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickSlot4",
                    "type": "Button",
                    "id": "9c101ac3-2f36-4e5d-b35e-5281517bdde1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickSlot5",
                    "type": "Button",
                    "id": "d0d6c8d4-03b3-4739-884c-2406ddc290a0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Direction",
                    "id": "fd962462-695a-40d3-bbf9-a435d56e6f09",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0e185e2b-fd5a-479d-a5ed-ff1cf305a995",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6377bedb-8934-443e-9da0-24c8d3e2fd5b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2c223e72-07b6-4381-85e4-b22013e55c56",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0a0e7d5d-3ea5-48e0-bc5b-0aff6606b8bc",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "de25f5ea-1b1c-4ecc-b89d-feb85388df68",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71c0651d-9011-4c53-8b5d-5b5e9a7e9f60",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "265200a8-6f3c-48c0-8b4a-26a9baa43168",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InteractAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "892775f2-21a0-49d5-8e2b-c57e12fad9d5",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InventoryAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31951ba9-f39f-4d4d-bc5d-0e9dc7d2f076",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "56ccc824-dffe-4cf3-8d49-a0b55e7611fb",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e218f9c-2c26-402b-a8d6-22ac81885362",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8815a005-fef7-4479-8540-f491ecd7f6b7",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HotbarKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a5bd806-9ac2-4d30-bbb5-d5bce40a2167",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HotbarKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "884b8164-5473-40fa-92d8-c24206b008d2",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HotbarKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7673a679-ee14-4471-b45f-c108347aa5a0",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HotbarKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d988bb1d-b481-4f7f-9fe8-3ef7c81d398b",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HotbarKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "736be2d7-1626-4a0a-a3fe-ddaf4dec7494",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "RightMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22a155b2-8fa9-4171-b76d-3f0d176cbf65",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5f097dff-0c0e-4eda-8240-f46c999e0f07",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuickSlot5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e29fbacb-7c6b-450f-9e77-505290556baa",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuickSlot4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dedc0620-61db-4b36-9ca4-de7bfa708af7",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuickSlot3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0144932f-52b3-42fa-9446-fc525d3f4272",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuickSlot2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "443cf428-d7b8-45c7-afef-4e967b9cfc2d",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuickSlot1",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New control scheme",
            "bindingGroup": "New control scheme",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}